method selection modified to be correct when failing to choose between equally-applicable methods.